testcases/pos/type/fun_return_cannot_fail.bard
let fun f(): Int = 3
in
    42
end
