testcases/neg/eval/to_few_args.bard
let fun f(x) = x
in f() end
